--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,28 +1,38 @@
-name: Swift Package CI
+name: Swift CI
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Set up Swift
-        uses: fwal/setup-swift@v1
-        with:
-          swift-version: "5.9"
+    - name: Set up Swift
+      uses: swift-actions/setup-swift@v1
+      with:
+        swift-version: '5.9'
 
-      - name: Run tests with coverage
-        run: swift test --enable-code-coverage
+    - name: Build
+      run: swift build -v
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4.5.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Run tests with coverage
+      run: swift test --enable-code-coverage
+
+    - name: Generate coverage report
+      run: |
+        xcrun llvm-cov export -format="lcov" .build/debug/PKSDependencyEnginePackageTests.xctest/Contents/MacOS/PKSDependencyEnginePackageTests -instr-profile .build/debug/codecov/default.profdata > coverage.lcov
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.lcov
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
